# time_tracker

./: .gitignore  dependency.py  docker-compose.yml  fixture.py  main.py  new.sqlite  pomodoro.db  pyproject.toml  requirements1.txt  settings.py
alembic/: env.py
cache/: accessor.py
database/: __init__.py  accessor.py  database.py  models.py
handlers/: __init__.py  auth.py  ping.py  tasks.py  user.py
models/: tasks.py  user.py
repository/: cache_task.py  task.py  user.py
schema/: task.py  user.py
service/: __init__.py  auth.py  task.py  user.py
